--- a/expenses-manager-frontend/src/main/frontend/src/app/add-expense-dialog/add-expense-dialog.component.html
+++ b/expenses-manager-frontend/src/main/frontend/src/app/add-expense-dialog/add-expense-dialog.component.html
@@ -65,9 +65,8 @@
   <!--description input div-->
   <div class="col-md-12 mb-3 d-flex align-items-center">
     <label class="form-label">Description</label>
-    <textarea [(ngModel)]="description" class="input-description" formControlName="description" aria-label="description-input" maxlength="255"></textarea>
+    <textarea class="input-description" formControlName="description" aria-label="description-input"></textarea>
   </div>
-  <span class="char-count">{{ description.length }}/255</span>
 
   <!--buttons div-->
   <div class="buttons">
